[alias]
generate = sdist bdist_wheel

[metadata]
name = misbehave
author = Piper Thunstrom
author_email = pathunstrom@gmail.com
description = Pythonic Behavior Trees
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pathunstrom/misbehave
license = Artistic-2.0
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: Artistic License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Games/Entertainment
    Topic :: Software Development :: Libraries
    Operating System :: OS Independent
    Typing :: Typed

[options.extras_require]
tests =
    pytest
release =
    wheel
    twine
